feat: update duty list on lang update

--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/DzemaelDarkhold.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/DzemaelDarkhold.json
@@ -4,5 +4,6 @@
     "Type": 0,
     "Expansion": 0,
     "Level": 44,
-    "UnlockQuestID": 66515
+    "UnlockQuestID": 66515,
+    "TerritoryID": 171
 }
