--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheBowlofEmbers_Hard.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheBowlofEmbers_Hard.json
@@ -6,6 +6,7 @@
     "Expansion": 0,
     "Level": 50,
     "UnlockQuestID": 66584,
+    "TerritoryID": 292,
     "Bosses": [
         {
             "Name": "Ifrit (Phase 1)",
