docs(duties): totorak - zoneid -> territoryid

--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheThousandMawsofTotoRak.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheThousandMawsofTotoRak.json
@@ -6,7 +6,7 @@
     "Expansion": 0,
     "Level": 24,
     "UnlockQuestID": 66050,
-    "ZoneID": 1039,
+    "TerritoryID": 1039,
     "Bosses": [
         {
             "Name": "Coeurl O' Nine Tails",
