--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheBowlofEmbers.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheBowlofEmbers.json
@@ -10,7 +10,7 @@
     "Bosses": [
         {
             "Name": "Ifrit",
-            "Strategy": "Below 75%% HP: Ifrit will periodically use Eruption.\n\nBelow 50%% HP: Ifrit will spawn multiple Infernal Nails and become invulnerable until they are destroyed as a DPS check.\n\nBelow 25%% HP: Eruption will create non-targeted AoEs.",
+            "Strategy": "Most of this fights mechanics are usually skipped due to the high amount of damage dealt from the party.\n\nBelow 75%% HP: Ifrit will periodically use Eruption.\n\nBelow 50%% HP: Ifrit will spanw an infernal nail that should be destroyed.\n\nBelow 25%% HP: Eruption will create non-targeted AoEs.",
             "KeyMechanics": [
                 {
                     "Name": "Eruption",
@@ -19,7 +19,7 @@
                 },
                 {
                     "Name": "Infernal Nail",
-                    "Description": "Timed DPS Check Adds.",
+                    "Description": "Timed DPS Check.",
                     "Type": 8
                 }
             ]
