feat: add WIP & better resizing

--- a/src/Resources/Localization/Plugin/KikoGuide_Localizable.json
+++ b/src/Resources/Localization/Plugin/KikoGuide_Localizable.json
@@ -116,7 +116,7 @@
     "description": "Settings.DrawSettingsWindow"
   },
   "UI.Settings.UpdateLocalization.Failed": {
-    "message": "Failed to update.",
+    "message": "Update Failed.",
     "description": "Settings.DrawSettingsWindow"
   },
   "UI.Settings.UpdateLocalization.UpdatedAt": {
